# vla_isaacsim

./: .gitignore  README.md  pyproject.toml
docs/: vla-landscape.md
docs/superpowers/plans/: 2026-06-23-level0-foundation.md  2026-06-23-vla-edge-masterplan.md
src/edgevla/: assessment.py  devices.py  jetson.py  kpi.py  modelstats.py
src/edgevla/compression/: exit_criteria.py  loop.py  pareto.py
src/edgevla/envs/: base.py  fake.py
src/edgevla/policies/: base.py  dummy.py
tests/: test_assessment.py  test_devices.py  test_envs_fake.py  test_exit_criteria.py  test_jetson.py  test_kpi.py  test_loop.py  test_modelstats.py  test_pareto.py  test_policies.py  test_smoke.py
